MFC r301138: sed(1): convert sed to use REG_STARTEND more explicitly.

This is a followup to previous r302228, which only merged the
incomplete r300684 causing a regression.

Reported by:	mi
PR:		209387
Taken from:     openbsd-tech (Martijn van Duren)